<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_the_word"
        style="@style/Widget.AppTheme.TrackText"
        />

    <TextView
        android:id="@+id/album_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/app_name"
        android:textSize="@dimen/album_title"
        style="@style/Widget.AppTheme.TrackText"
        />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/performer_name"
        style="@style/Widget.AppTheme.TrackText"
        />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/album_published"
        style="@style/Widget.AppTheme.TrackText"
        />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/album_genre"
        style="@style/Widget.AppTheme.TrackText"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_control_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppTheme.StateButton"
        app:iconSize="@dimen/player_control_height"
        android:checkable="true"
        />

</LinearLayout>